--- a/html/products.html
+++ b/html/products.html
@@ -6,51 +6,11 @@
   <div class="row">
 
     <!-- Termék kártyák -->
-    <div class="col-md-12">
+    <div class="col-md-12 ">
       <section class="py-5"
                style="background-color: #f8f9fa;">
         <div class="col-md-9 mx-auto">
-
-          <!-- "ecogourmet-cards" osztály-->
-          <div class="card-container text-center ecogourmet-cards" >
-            <div class="card mb-4" 
-                 ng-repeat="product in filteredProducts = (products | filter: { kategoria: categoryFilter } | limitTo: 8)">
-
-              <!-- Termék képe / csak minta!! képei -->
-              <div class="card-img" 
-                   ng-style="{'background-image': 'url(\'./media/image/products/protein' + ($index + 1) + '.webp\')', 'background-size': 'cover', 'background-position': 'center', 'background-repeat': 'no-repeat'}">
-
-                <!-- Termék részletei -->
-                <div class="card-body">
-                  <div>
-
-                    <!-- Product name-->
-                    <h5 class="card-title fw-bolder small">{{product.nev}}</h5>
-
-                    <!-- Product gyártó forgalmazo-->
-                    <p class="card-text small" 
-                       ng-if="product.forgalmazo">{{product.forgalmazo}}</p>
-
-                    <!-- Product price-->
-                    <p class="card-text text-small-caps" 
-                       ng-if="product.ar_forint">Ár: {{product.ar_forint}} Ft</p>
-                  </div>
-                </div>
-
-                <!-- Product actions-->
-                <div class="card-footer bg-transparent">
-                  <div>
-                    <a class="btn btn-outline-dark mt-auto" 
-                    ng-click="addToCart(product, 'shop')">
-                    {{ 'Cart' | translate:lang.data}}
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
+                  
         <!-- Tab filters -->
 <div class="container">
   <ul class="nav nav-pills mb-3 nav-justified" id="pills-tab" role="tablist">
@@ -69,21 +29,30 @@
     </li>
   </ul>
 
-  <!-- Tab content -->
-  <div class="tab-content" id="pills-tabContent">
-    <div ng-repeat="category in getCategoryList()" 
-         ng-if="category === $scope.activeTab" 
-         id="{{ 'tab-' + category }}" 
-         class="tab-pane fade show active" 
-         role="tabpanel" 
-         aria-labelledby="{{ 'tab-' + category + '-tab' }}">
-      <!-- Your content for each tab goes here -->
-      <h3>{{ category }}</h3>
-      <p>Content for {{ category }} tab goes here.</p>
-    </div>
-  </div>
-</div>
-
+          <div class="card-group position-relative">
+            <div class="card mb-4" ng-repeat="product in filteredProducts = (products | filter: { kategoria: categoryFilter } | limitTo:4)">
+                <!-- Termék képe -->
+                <img ng-src="{{product.kep_eleresi_ut}}" class="card-img-top img-fluid" style="height: 400px;" alt="{{product.nev}}">
+                <!-- Termék részletei -->
+                <div class="card-body">
+                    <div>
+                        <!-- Product name-->
+                        <h5 class="card-title fw-bolder ">{{product.nev}}</h5>
+                        <!-- Product leírás -->
+                        <p class="card-text small" ng-if="product.leiras">{{product.leiras}}</p>
+                    </div>
+                </div>
+                <!-- Product actions-->
+                <div class="card-footer bg-transparent d-flex justify-content-center align-items-center flex-column">
+                    <div class="mb-auto">
+                        <p class="card-text fw-bolder" ng-if="product.ar_forint">Ár: {{product.ar_forint}} Ft</p>
+                    </div>
+                    <div>
+                        <a class="btn btn-outline-dark" ng-click="addToCart(product, 'shop')">{{ 'Cart' | translate:lang.data}}</a>
+                    </div>
+                </div>
+            </div>
+        </div>
       </section>
     </div>
   </div>
@@ -129,8 +98,7 @@
 <section class=" bg-light py-5 ">
   <div class="container px-5 my-5">
     <div class="text-center mb-5">
-      <h2 class="fw-bolder">Velünk minden lehetséges!</h2>
-      <p class="lead mb-0">Az árainkat is rátok szabtuk.</p>
+      <h2 class="fw-bolder">{{ 'abut_pricing_title' | translate:lang.data }}</h2>
     </div>
     <div class="row gx-5 justify-content-center">
       <div class="col-lg-4 mb-5" 
@@ -140,16 +108,12 @@
             <div class="small text-uppercase fw-bold text-muted">{{plan.name}}</div>
             <div class="mb-3">
               <span class="display-4 fw-bold">{{plan.ar_forint}}Ft</span>
-              <span class="text-muted">/feliratkozás.</span>
+              <span class="text-muted">{{ 'sub' | translate:lang.data }}</span>
             </div>
             <ul class="list-unstyled mb-4">
               <li class="mb-2">
                 <i class="bi bi-check text-primary"></i>
-                <strong>Előfizetése {{plan.duration}} hónapig tart.</strong>
-              </li>
-              <li class="mb-2">
-                <i class="bi bi-check text-primary"></i>
-                {{plan.description}}
+                {{ 'plan_desc_' + ($index + 1) | translate:lang.data }}
               </li>
             </ul>
           </div>
