--- a/html/services.html
+++ b/html/services.html
@@ -2,3 +2,46 @@
 
 <div class="page-container vh-100">
     <header class="sticky-top" ng-include src="'./html/navigate.html'"></header>    
+    
+<!-- Új szekció a címmel és háttérképpel -->
+<section class="px-5" style="background-image: url('./media/image/about_us/family-dinner.jpeg'); 
+background-size: cover; 
+background-position: center;"></section>
+<!-- Tabs pills with justify-content -->
+<div class="nav nav-pills justify-content-center text-center mt-3 py-3" role="tablist" aria-orientation="horizontal">
+<a data-mdb-tab-init class="nav-link" ng-repeat="menu in menus" ng-class="{ 'active': activeTab === menu.tabId }" ng-click="setActiveTab(menu.tabId)" role="tab" aria-controls="{{ menu.tabId }}" aria-selected="{{ activeTab === menu.tabId ? 'true' : 'false' }}">
+{{ menu.title }}
+</a>
+</div>
+<!-- Tabs pills with justify-content -->
+<!-- Tabs content -->
+<div class="tab-content mt-3 d-flex justify-content-center align-items-center" id="v-tabs-tabContent">
+<div class="tab-pane fade text-center" ng-repeat="menu in menus" ng-class="{ 'show active': activeTab === menu.tabId }" id="{{ menu.tabId }}" role="tabpanel" aria-labelledby="{{ menu.tabId }}">
+<p>{{ menu.title }}</p>
+<div class="row gy-4" style="max-inline-size: 140ch;" ng-if="menu.recipes && menu.recipes.length > 0">
+<div class="col-lg-4 col-md-6
+menu-item" ng-repeat="recipe in menu.recipes">
+<h4>{{ recipe.name }}</h4>
+<p class="ingredients text-center">{{ recipe.ingredients }}</p>
+<p class="instructions">{{ recipe.instructions }} </p>
+<p class="time">{{ recipe.cooking_time }} perc</p>
+</div>
+</div>
+</div>
+</div>
+
+<!-- Awards Section -->
+<section class="showcase px-2">
+<div class="container-fluid p-0">
+<div class="row g-3 " ng-repeat="award in awards_achievements | limitTo: 5">
+<div class="col-lg-6 order-lg-{{ $index % 2 === 0 ? 2 : 1 }} text-white showcase-img" style="background-image:url('./media/image/awards/award{{$index+1}}.jpeg');"></div>
+<div class="col-lg-6 order-lg-{{ $index % 2 === 0 ? 1 : 2 }} my-auto showcase-text">
+<h2 class="fw-bolder py-3">{{ 'award_title_'  + ($index + 1) | translate:lang.data }}</h2>
+<p class="lead mb-0 text-center py-3" style="max-inline-size: 100ch;">
+{{ 'award_text_'  + ($index + 1) | translate:lang.data }}
+</p>
+<p class="lead mb-0 text-muted small">{{ award.date }}</p>
+</div>
+</div>
+</div>
+</section>
