--- a/html/landing.html
+++ b/html/landing.html
@@ -6,10 +6,12 @@
   </header>
   
   <!-- Slider -->
-  <div class="slider slider-{{$index+1}} vh-100 vw-100 position-absolute overflow-hidden top-0 start-0" ng-repeat="x in [].constructor(4) track by $index">
+  <div class="slider slider-{{$index+1}} vh-100 vw-100 position-absolute overflow-hidden top-0 start-0" 
+       ng-repeat="x in [].constructor(4) track by $index">
 
     <!-- Slider image -->
-    <div class="slider-image slider-image-{{$index+1}} vh-100 bg-img bg-img-cover" style="background-image:url('./media/image/food{{$index+1}}.jpg');">
+    <div class="slider-image slider-image-{{$index+1}} vh-100 bg-img bg-img-cover" 
+         style="background-image:url('./media/image/food{{$index+1}}.jpg');">
 
       <!-- Slider content -->
       <div class="slider-text position-absolute text-white p-3">
