--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title data-lang-key="default">EcoGourmet</title>
+  <title data-lang-key="EcoGourmet">EcoGourmet</title>
 
   <!-- Application components -->
   <link rel="stylesheet" href="../../components/bootstrap/5.3.1/css/bootstrap.min.css">
