--- a/html/about.html
+++ b/html/about.html
@@ -6,7 +6,7 @@
   <!-- Video Container -->
   <div class="video-container">
     <video autoplay muted loop>
-      <source src="./media/video/robin.mp4" type="video/mp4">
+      <source ng-src="./media/video/robin.mp4" type="video/mp4">
     </video>
   </div>
 
@@ -22,10 +22,8 @@
 
 
   <!-- Content after video -->
+    <!-- Section: about us text part angular version -->
   <div class="inner-header flex"></div>
-
-
-  <!-- Section: about us text part angular version -->
   <section class="hidden" id="scroll">
     <div class="container" ng-repeat="aboutUsText in aboutUsTexts">
       <div class="row gx-5 align-items-center">
@@ -84,7 +82,7 @@
     <div class="container col-xxl-8 px-4 py-5">
       <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
         <div class="col-10 col-sm-8 col-lg-6">
-          <img src="./media/image/about_us/hero_cooking.jpeg" 
+          <img ng-src="./media/image/about_us/hero_cooking.jpeg" 
           class="d-block mx-lg-auto img-fluid rounded-3" 
           alt="Bootstrap Themes" 
           width="700" 
