--- a/html/products.html
+++ b/html/products.html
@@ -1,5 +1,5 @@
 <!-- Navigate -->
-<header class="sticky-top" ng-include src="'./html/navigate.html'"></header>
+<div class="">
 
 
   <!-- Sky Video -->
@@ -250,7 +250,4 @@
       </div>
     </div>
   </section>
-
-
- <!-- Footer -->
-<footer ng-include src="'./html/footer.html'"></footer>
+</div>
