--- a/html/footer.html
+++ b/html/footer.html
@@ -1,18 +1,33 @@
-<!DOCTYPE html>
-<html>
-<head>
-</head>
-<body>
-<div id="availability" class="container-fluid bg-light pt-3">
-    <!-- School -->
-    <div class="row">
-    <!-- Copyright -->
-    <div class="copyright row mt-0">
-        <hr class="mt-3 mb-1">
-        <p class="fw-lighter fs-sm mb-2 w-100 text-center">
-            &copy; Copyright&nbsp;&nbsp;2021-{{currentDay | date:'yyyy'}} Ecogourmet
-        </p>
-    </div>
+<!-- Container -->
+<div class="container text-center">
+
+  <!-- Social media -->
+  <ul class="list-unstyled border-top pt-3 mb-2"
+      ng-init="socialMedia=[{icon:'fab fa-facebook-f',  bg:'#3b5998'}, 
+                            {icon:'fab fa-twitter',     bg:'#55acee'},
+                            {icon:'fab fa-google',      bg:'#dd4b39'},
+                            {icon:'fab fa-instagram',   bg:'#ac2bac'},
+                            {icon:'fab fa-linkedin-in', bg:'#0082ca'},
+                            {icon:'fab fa-github',      bg:'#333333'}]">
+    <li class="d-inline-block"
+        ng-repeat="sm in socialMedia">
+      <a class="btn text-white btn-floating mx-1"
+         ng-class="{'disabled': state.group==='user'}"
+         style="background-color: #3b5998;"
+         ng-style="{'backgroundColor': sm.bg}"
+         href=""
+         role="button">
+        <i ng-class="sm.icon"></i>
+      </a>
+    </li>
+  </ul> 
 </div>
-</body>
-</html>
+
+<!-- Container -->
+<div class="container">
+
+  <!-- Copyright -->
+  <p class="fs-md text-center mb-1">
+    <span>&copy; 2023-{{app.currentDay.getFullYear()}} Ecogourmet</span>
+  </p>
+</div>
