--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <title data-lang-key="EcoGourmet">EcoGourmet</title>
 
   <!-- Application components -->
-  <link rel="stylesheet" href="../../components/bootstrap/5.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../../components/font-awesome/6.4.2/css/all.min.css">
-  <link rel="stylesheet" href="../../common/css/common.css">
+  <link rel="stylesheet" href="../components/bootstrap/5.3.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../components/font-awesome/6.4.2/css/all.min.css">
+  <link rel="stylesheet" href="../common/css/common.css">
+  <link rel="stylesheet" href="../common/css/form-dialog.css">
+  <link rel="stylesheet" href="../common/css/animations.css">
   <link rel="stylesheet" href="./css/app.css">
 
 </head>
@@ -22,16 +24,17 @@
   
   <!-- Application components -->
 	<div class="d-none">
-    <script src="../../components/jquery/3.7.0/js/jquery.min.js"></script>
-    <script src="../../components/angular-js/1.8.2/js/angular.min.js"></script>
-    <script src="../../components/angular-js/angular-ui-router/1.0.30/js/angular-ui-router.min.js"></script>
-    <script src="../../components/moment/2.29.4/js/moment-with-locales.min.js"></script>
-    <script src="../../common/js/common-angular.js"></script>
-    <script src="../../common/js/language-angular.js"></script>
-    <script src="../../common/js/form-angular.js"></script>
-    <script src="../../components/bootstrap/5.3.1/js/bootstrap.bundle.min.js"></script>
+    <script src="../components/jquery/3.7.0/js/jquery.min.js"></script>
+    <script src="../components/angular-js/1.8.2/js/angular.min.js"></script>
+    <script src="../components/angular-js/angular-animate/1.8.2/js/angular-animate.min.js"></script>
+    <script src="../components/angular-js/angular-ui-router/1.0.30/js/angular-ui-router.min.js"></script>
+    <script src="../components/moment/2.29.4/js/moment-with-locales.min.js"></script>
+    <script src="../common/js/common-angular.js"></script>
+		<script src="../common/js/language-angular.js"></script>
+    <script src="../common/js/user-angular.js"></script>
+    <script src="../common/js/form-angular.js"></script>
+    <script src="../components/bootstrap/5.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="./js/app.js"></script>
-
   </div>
 </body>
 </html>
