--- a/html/services.html
+++ b/html/services.html
@@ -11,7 +11,6 @@
 </div>
 
 
-
 <!-- Introduction -->
 <div class="container p-5 bg-body mt-md-n6 position-relative rounded">
   <div class="row">
@@ -35,16 +34,20 @@
     </div>
   </div>
 </div>
-<div class="py-5 bg-transparent text-center w-100">
-	<h1 class="display-1">
-    {{ 'recipe_kategoria_1' | translate:lang.data}}
-  </h1>
-	<div >
-		<p class="lead">
-      {{ 'recipe_tit_1' | translate:lang.data}}
-    </p>
-	</div>
-</div>
+
+
+<!-- Kategoria-Title -->
+  <div class="py-5 bg-transparent text-center w-100">
+    <h1 class="display-1">
+      {{ 'recipe_kategoria_1' | translate:lang.data}}
+    </h1>
+    <div >
+      <p class="lead">
+        {{ 'recipe_tit_1' | translate:lang.data}}
+      </p>
+    </div>
+  </div>
+
 
 <!-- Croissant sajtos szendvics -->
 <div class="container my-5">
@@ -74,43 +77,54 @@
     <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden">
       <div class="lc-block">
         <img ng-src="./media/image/card1.jpg" 
-        sizes="(max-width: 1080px) 100vw, 1080px" 
-        height="600" 
-        width="720">
+             sizes="(max-width: 1080px) 100vw, 1080px" 
+             height="600" 
+             width="720">
       </div>
     </div>
   </div>
 </div>
 
 
-<div class="py-5 bg-transparent text-center w-100">
-	<h1 class="display-1">
-    {{ 'recipe_kategoria_2' | translate:lang.data}}
-  </h1>
-	<div>
-		<p class="lead">
-      {{ 'recipe_tit_1' | translate:lang.data}}
-    </p>
-	</div>
-</div>
+<!-- Kategoria-Title -->
+  <div class="py-5 bg-transparent text-center w-100">
+    <h1 class="display-1">
+      {{ 'recipe_kategoria_2' | translate:lang.data}}
+    </h1>
+    <div>
+      <p class="lead">
+        {{ 'recipe_tit_1' | translate:lang.data}}
+      </p>
+    </div>
+  </div>
+
 
 <!-- Recipe Cards -->
 <section class="text-center">
   <div class="row p-3 justify-content-center">
-    <div class="col-md-3 mb-3" ng-repeat="recipe in recipes | filter:{kategoria: 'recipe_kategoria_3'} | limitTo: 3">
-      <div class="card" style="height: 550px;">
+    <div class="col-md-3 mb-3" 
+         ng-repeat="recipe in recipes | filter:{kategoria: 'recipe_kategoria_3'} | limitTo: 3">
+      <div class="card" 
+           style="height: 550px;">
         <div class="bg-image hover-overlay">
-          <img ng-src="{{recipe.kep}}" class="card-img-top img-fluid" alt="{{recipe.nev}}" style="width: 100%; height: 300px;">
-          <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
+          <img ng-src="{{recipe.kep}}" 
+               class="card-img-top img-fluid" 
+               alt="{{recipe.nev}}" 
+               style="width: 100%; height: 300px;">
+          <div class="mask" 
+               style="background-color: rgba(251, 251, 251, 0.15);">
+        </div>
         </div>
         <div class="card-body">
           <h5 class="card-title fs-6">
             {{recipe.nev | translate:lang.data}}
           </h5>
-          <p class="card-text small overflow-hidden" style="max-height: 80px;">
+          <p class="card-text small overflow-hidden" 
+             style="max-height: 80px;">
             Hozzávalok: {{recipe.hozzavalok | translate:lang.data}}
           </p>
-          <p class="small overflow-hidden" style="max-height: 60px;">
+          <p class="small overflow-hidden" 
+             style="max-height: 60px;">
             Elkészítés: {{recipe.elkeszites | translate:lang.data}}
           </p>
         </div>
@@ -120,17 +134,18 @@
 </section>
 
 
+<!-- Kategoria-Title -->
+  <div class="py-5 bg-transparent text-center w-100">
+    <h1 class="display-1">
+      {{ 'recipe_kategoria_3' | translate:lang.data}}
+    </h1>
+    <div >
+      <p class="lead">
+        {{ 'recipe_tit_1' | translate:lang.data}}
+      </p>
+    </div>
+  </div>
 
-<div class="py-5 bg-transparent text-center w-100">
-	<h1 class="display-1">
-    {{ 'recipe_kategoria_3' | translate:lang.data}}
-  </h1>
-	<div >
-		<p class="lead">
-      {{ 'recipe_tit_1' | translate:lang.data}}
-    </p>
-	</div>
-</div>
 
 <!-- Featured Recipe 1 -->
 <section>
@@ -139,10 +154,10 @@
     <div class="row align-items-center">
       <div class="col-md-7 mb-5 mb-md-0">
         <img ng-src="{{recipe.kep}}" 
-            class="card-img-top img-fluid aspect-ratio-item" 
-            alt="{{recipe.nev}}" 
-            sizes="(max-width: 1080px) 100vw, 1080px" 
-            height="768">
+             class="card-img-top img-fluid aspect-ratio-item" 
+             alt="{{recipe.nev}}" 
+             sizes="(max-width: 1080px) 100vw, 1080px" 
+             height="768">
       </div>
       <div class="col-md-5 col-xl-4 offset-xl-1">
         <div class="lc-block mb-4">
@@ -173,8 +188,7 @@
       </div>
     </div>
   </div>
-
-  <!-- Featured Recipe 2 -->
+<!-- Featured Recipe 2 -->
   <div class="container py-6" 
   ng-repeat="recipe in recipes | filter:{kategoria: 'recipe_kategoria_2'} | limitTo: 1">
     <div class="row align-items-center">
