--- a/html/header.html
+++ b/html/header.html
@@ -126,7 +126,7 @@
                   <td>{{ getTotalPrice() }}Ft</td>
                   <td>
                     <li class="nav-item">
-                      <a class="nav-link btn btn-success" 
+                      <a class="nav-link btn" 
                          ng-click="finalizeOrder()"
                          ng-class="{'disabled': !user.id}"
                          ng-disabled="!user.id">
