--- a/html/about.html
+++ b/html/about.html
@@ -11,7 +11,7 @@
   <!-- Home title -->
   <div class="home">
     <div class="backdrop-filter-element"></div>
-    <div class="home-content">
+    <div class="home-content" id="sda">
       <h1 id="abut">EcoGourmet</h1>
       <i ng-click="scrollTo('scroll')"
          class="fa-solid fa-chevron-down fa-bounce cursor-pointer" 
