--- a/html/header.html
+++ b/html/header.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light opacity-85">
   
   <!-- Container -->
   <div class="container-fluid">
